# Catsxp_MPL2.0

./: README.md
browser/catsxp_ads/: BUILD.gn  DEPS  ads_service_delegate.cc  ads_service_delegate.h  ads_service_factory.cc  ads_service_factory.h  ads_service_waiter.cc  ads_service_waiter.h  virtual_pref_provider_delegate.cc  virtual_pref_provider_delegate.h
browser/catsxp_ads/android/: BUILD.gn  catsxp_ads_native_helper.cc  catsxp_ads_native_helper.h  java_sources.gni
browser/catsxp_ads/device_id/: BUILD.gn  device_id_impl.cc  device_id_impl.h  device_id_impl_android.cc  device_id_impl_linux.cc  device_id_impl_mac.cc  device_id_impl_unittest.cc  device_id_impl_win.cc
browser/catsxp_ads/services/: BUILD.gn  DEPS  bat_ads_service_factory_impl.cc  bat_ads_service_factory_impl.h
browser/catsxp_ads/tabs/: BUILD.gn  ads_tab_helper.cc  ads_tab_helper.h  ads_tab_helper_browsertest.cc
browser/catsxp_ads/tooltips/: BUILD.gn  ads_captcha_tooltip.cc  ads_captcha_tooltip.h  ads_tooltips_controller.cc  ads_tooltips_controller.h  ads_tooltips_delegate_impl.cc  ads_tooltips_delegate_impl.h
browser/catsxp_shields/: BUILD.gn  DEPS  ad_block_browser_test_helper.cc  ad_block_browser_test_helper.h  ad_block_custom_resources_browsertest.cc  ad_block_dat_cache_browsertest.cc  ad_block_devtools_browsertest.cc  ad_block_only_mode_browsertest.cc  ad_block_pref_service_factory.cc  ad_block_pref_service_factory.h  ad_block_service_browsertest.cc  ad_block_service_browsertest.h  ad_block_subscription_download_manager_getter.cc  ad_block_subscription_download_manager_getter.h  catsxp_farbling_service_factory.cc  catsxp_farbling_service_factory.h  catsxp_shields_settings_service_factory.cc  catsxp_shields_settings_service_factory.h  catsxp_shields_tab_helper.cc  catsxp_shields_tab_helper.h  catsxp_shields_tab_helper_unittest.cc  catsxp_shields_util_profiles_unittest.cc  catsxp_shields_web_contents_observer.cc  catsxp_shields_web_contents_observer.h  catsxp_shields_web_contents_observer_android.cc  catsxp_shields_web_contents_observer_browsertest.cc  catsxp_timestamp_rounding_browsertest.cc  cookie_expiry_browsertest.cc  cookie_pref_service_browsertest.cc  domain_block_page_browsertest.cc  eventsource_pool_limit_browsertest.cc  filter_list_service_factory.cc  filter_list_service_factory.h  https_upgrade_browsertest.cc  websockets_pool_limit_browsertest.cc
browser/catsxp_shields/android/: BUILD.gn  catsxp_first_party_storage_cleaner_utils.cc  filter_list_service_factory_android.cc
browser/containers/: BUILD.gn  container_specifier_utils.cc  container_specifier_utils.h  container_tab_tracker.cc  container_tab_tracker.h  containers_browsertest.cc  containers_service_delegate.cc  containers_service_delegate.h  containers_service_delegate_unittest.cc  containers_service_factory.cc  containers_service_factory.h  used_container_storage_partitions.cc  used_container_storage_partitions.h
browser/new_tab/: BUILD.gn  background_color_tab_helper.cc  background_color_tab_helper.h  background_color_tab_helper_browsertest.cc  new_tab_shows_navigation_throttle.cc  new_tab_shows_navigation_throttle.h  new_tab_shows_options.cc  new_tab_shows_options.h  new_tab_shows_options_unittest.cc  sources.gni
browser/ntp_background/: BUILD.gn  DEPS  catsxp_ntp_custom_background_service_delegate.cc  catsxp_ntp_custom_background_service_delegate.h  catsxp_ntp_custom_background_service_delegate_unittest.cc  catsxp_ntp_custom_background_service_factory.cc  catsxp_ntp_custom_background_service_factory.h  constants.h  custom_background_file_manager.cc  custom_background_file_manager.h  custom_background_file_manager_browsertest.cc  new_tab_takeover_infobar_delegate.cc  new_tab_takeover_infobar_delegate.h  new_tab_takeover_infobar_delegate_unittest.cc  ntp_background_prefs.cc  ntp_background_prefs.h  ntp_background_prefs_unittest.cc  ntp_sponsored_rich_media_browsertest.cc  ntp_sponsored_rich_media_with_csp_violation_browsertest.cc  view_counter_service_factory.cc  view_counter_service_factory.h
browser/ntp_background/android/: BUILD.gn  DEPS  ntp_background_images_bridge.cc  ntp_background_images_bridge.h
browser/ntp_background_images/: sources.gni
browser/ntp_customization/: BUILD.gn
browser/playlist/: playlist_data_source.cc  playlist_data_source.h  playlist_service_factory.cc  playlist_service_factory.h  sources.gni
browser/playlist/android/: playlist_service_factory_android.cc
browser/playlist/test/: BUILD.gn  mime_util_unittest.cc  mock_playlist_render_frame_observer_configurator.cc  mock_playlist_render_frame_observer_configurator.h  mock_playlist_service_observer.cc  mock_playlist_service_observer.h  playlist_active_tab_tracker_browsertest.cc  playlist_background_web_contents_helper_unittest.cc  playlist_browsertest.cc  (+8 more)
browser/sync/: BUILD.gn  DEPS  catsxp_sync_alerts_service.cc  catsxp_sync_alerts_service.h  catsxp_sync_alerts_service_factory.cc  catsxp_sync_alerts_service_factory.h  catsxp_sync_client_unittest.cc  catsxp_sync_devices_android.cc  catsxp_sync_devices_android.h  catsxp_sync_service_impl_delegate.cc  catsxp_sync_service_impl_delegate.h  network_time_helper_browsertest.cc  sources.gni
components/catsxp_adblock_ui/: BUILD.gn  catsxp_adblock.html  catsxp_adblock.tsx  storage.ts  store.ts
components/catsxp_new_tab_ui/: BUILD.gn  apiEventsToStore.ts  catsxp_new_tab.html  catsxp_new_tab.tsx  catsxp_new_tab_page.mojom  rewards-utils.ts  store.ts
components/catsxp_sync/: BUILD.gn  DEPS  catsxp_sync_p3a.cc  catsxp_sync_p3a.h  catsxp_sync_p3a_unittest.cc  catsxp_sync_prefs.cc  catsxp_sync_prefs.h  catsxp_sync_prefs_unittest.cc  features.cc  features.h  network_time_helper.cc  network_time_helper.h  qr_code_data.cc  qr_code_data.h  qr_code_data_unittest.cc  qr_code_validator.cc  qr_code_validator.h  qr_code_validator_unittest.cc  sync_helpers.cc  sync_helpers.h  sync_service_impl_helper.cc  sync_service_impl_helper.h  time_limited_words.cc  time_limited_words.h  time_limited_words_unittest.cc
components/catsxp_welcome_ui/: BUILD.gn  catsxp_welcome.html  catsxp_welcome.tsx  main_container.tsx
(+2787 files in other folders)
