# Copyright (c) 2023 The Catsxp Authors. All rights reserved. 

import("//catsxp/components/catsxp_ads/buildflags/buildflags.gni")
import("//build/config/ozone.gni")
import("//build/config/ui.gni")
import("//catsxp/components/catsxp_rewards/core/buildflags/buildflags.gni")

assert(enable_catsxp_ads)

source_set("catsxp_ads") {
  sources = [
    "ads_service_delegate.h",
    "ads_service_factory.h",
    "analytics/p3a/catsxp_stats_helper.h",
    "virtual_pref_provider_delegate.h",
  ]

  public_deps = [
    "//base",
    "//catsxp/components/catsxp_ads/browser",
    "//chrome/browser/profiles:profile",
    "//components/keyed_service/content",
    "//components/prefs",
    "//components/search_engines",
    "//components/sessions:session_id",
    "//content/public/browser",
  ]
}

source_set("impl") {
  visibility = [
    ":*",
    "//chrome/browser",
  ]

  sources = [
    "ads_service_delegate.cc",
    "ads_service_factory.cc",
    "analytics/p3a/catsxp_stats_helper.cc",
    "application_state/notification_helper/notification_helper.cc",
    "application_state/notification_helper/notification_helper.h",
    "application_state/notification_helper/notification_helper_impl.cc",
    "application_state/notification_helper/notification_helper_impl.h",
    "virtual_pref_provider_delegate.cc",
  ]

  deps = [
    ":catsxp_ads",
    "//base",
    "//catsxp/browser/catsxp_ads/device_id",
    "//catsxp/browser/catsxp_ads/services",
    "//catsxp/browser/catsxp_ads/tooltips",
    "//catsxp/browser/catsxp_stats",
    "//catsxp/components/catsxp_ads/browser/application_state",
    "//catsxp/components/catsxp_policy:policy_initialization_waiter",
    "//catsxp/components/catsxp_rewards/core/buildflags",
    "//catsxp/components/p3a_utils",
    "//chrome/browser:browser_process",
    "//chrome/browser:browser_public_dependencies",
    "//chrome/browser:primitives",
    "//chrome/browser/content_settings:content_settings_factory",
    "//chrome/browser/history",
    "//chrome/browser/notifications",
    "//chrome/browser/profiles:profile",
    "//chrome/browser/profiles:profile_manager",
    "//chrome/browser/profiles:profile_util",
    "//chrome/browser/search_engines",
    "//chrome/browser/ui",
    "//chrome/common:channel_info",
    "//chrome/common:chrome_features",
    "//chrome/common:constants",
    "//components/keyed_service/content",
    "//components/variations",
    "//components/variations/service",
    "//services/network/public/cpp",
    "//ui/gfx",
    "//ui/message_center/public/cpp",
  ]

  if (enable_catsxp_rewards) {
    deps += [
      "//catsxp/browser/catsxp_adaptive_captcha",
      "//catsxp/components/catsxp_adaptive_captcha",
      "//catsxp/browser/catsxp_rewards",
      "//catsxp/browser/catsxp_rewards:util",
    ]
  }

  if (toolkit_views) {
    deps += [ "//ui/views" ]
  }

  if (use_aura) {
    deps += [ "//ui/aura" ]
  }

  if (ozone_platform_x11) {
    deps += [
      "//ui/base/x",
      "//ui/gfx/x",
    ]
  }

  if (is_android) {
    sources += [
      "application_state/application_state_monitor/application_state_monitor_android.cc",
      "application_state/application_state_monitor/application_state_monitor_android.h",
      "application_state/notification_helper/notification_helper_impl_android.cc",
      "application_state/notification_helper/notification_helper_impl_android.h",
    ]

    deps += [
      "//catsxp/browser/catsxp_ads/android:jni_headers",
      "//catsxp/browser/notifications",
      "//catsxp/build/android:jni_headers",
      "//chrome/browser/notifications:jni_headers",
      "//chrome/browser/notifications:notifications_java_enum_srcjar",
    ]
  }  # is_android

  if (is_linux) {
    sources += [
      "application_state/application_state_monitor/application_state_monitor_linux.cc",
      "application_state/application_state_monitor/application_state_monitor_linux.h",
      "application_state/notification_helper/notification_helper_impl_linux.cc",
      "application_state/notification_helper/notification_helper_impl_linux.h",
    ]
  }

  if (is_mac) {
    sources += [
      "application_state/application_state_monitor/application_state_monitor_mac.h",
      "application_state/application_state_monitor/application_state_monitor_mac.mm",
      "application_state/notification_helper/notification_helper_impl_mac.h",
      "application_state/notification_helper/notification_helper_impl_mac.mm",
    ]
  }

  if (is_win) {
    sources += [
      "application_state/application_state_monitor/application_state_monitor_win.cc",
      "application_state/application_state_monitor/application_state_monitor_win.h",
      "application_state/notification_helper/notification_helper_impl_win.cc",
      "application_state/notification_helper/notification_helper_impl_win.h",
    ]

    deps += [ "//chrome/installer/util:with_no_strings" ]
  }
}

source_set("browser_tests") {
  testonly = true

  sources = [
    "ads_service_waiter.cc",
    "ads_service_waiter.h",
    "analytics/p3a/catsxp_stats_helper_browsertest.cc",
    "application_state/notification_helper/notification_helper_impl_mock.cc",
    "application_state/notification_helper/notification_helper_impl_mock.h",
  ]

  deps = [
    ":catsxp_ads",
    ":impl",
    "//chrome/browser",
    "//chrome/test:test_support",
  ]

  if (is_android) {
    deps += [ "//chrome/test:test_support_ui_android" ]
  } else {
    deps += [ "//chrome/test:test_support_ui" ]
  }

  defines = [ "HAS_OUT_OF_PROC_TEST_RUNNER" ]
}
