# Copyright (c) 2023 The Catsxp Authors. All rights reserved. 

source_set("browser_tests") {
  testonly = true

  if (is_win) {
    sources = [ "background_color_tab_helper_browsertest.cc" ]
    deps = [
      "//chrome/browser",
      "//chrome/browser:browser_process",
      "//chrome/browser/profiles:profile",
      "//chrome/browser/themes",
      "//chrome/browser/ui",
      "//chrome/test:test_support",
      "//chrome/test:test_support_ui",
    ]

    defines = [ "HAS_OUT_OF_PROC_TEST_RUNNER" ]
  }
}

source_set("unittest") {
  testonly = true

  if (!is_android) {
    sources = [ "new_tab_shows_options_unittest.cc" ]
    deps = [
      "//catsxp/browser",
      "//catsxp/common",
      "//catsxp/components/constants",
      "//chrome/common",
      "//chrome/test:test_support",
      "//components/prefs",
      "//content/test:test_support",
      "//testing/gtest",
      "//url",
    ]
  }
}
