# Copyright (c) 2023 The Catsxp Authors. All rights reserved. 

catsxp_browser_new_tab_sources = []
catsxp_browser_new_tab_deps = []

if (!is_android) {
  catsxp_browser_new_tab_sources += [
    "//catsxp/browser/new_tab/new_tab_shows_navigation_throttle.cc",
    "//catsxp/browser/new_tab/new_tab_shows_navigation_throttle.h",
    "//catsxp/browser/new_tab/new_tab_shows_options.cc",
    "//catsxp/browser/new_tab/new_tab_shows_options.h",
  ]

  if (is_win) {
    catsxp_browser_new_tab_sources += [
      "//catsxp/browser/new_tab/background_color_tab_helper.cc",
      "//catsxp/browser/new_tab/background_color_tab_helper.h",
    ]
  }

  catsxp_browser_new_tab_deps += [
    "//base",
    "//catsxp/app:catsxp_generated_resources_grit",
    "//catsxp/components/constants",
    "//chrome/common",
    "//components/prefs",
    "//content/public/browser",
    "//ui/base",
    "//url",
  ]
}
