# Copyright (c) 2023 The Catsxp Authors. All rights reserved. 

import("//catsxp/components/catsxp_vpn/common/buildflags/buildflags.gni")
import("//catsxp/components/common/typescript.gni")
import("//mojo/public/tools/bindings/mojom.gni")

transpile_web_ui("catsxp_new_tab_ui") {
  entry_points = [ [
        "catsxp_new_tab",
        rebase_path("catsxp_new_tab.tsx"),
      ] ]
  public_deps = [
    ":mojom_js",
    "//catsxp/components/catsxp_news/common:mojom_js",
    "//catsxp/components/catsxp_rewards/core/mojom:mojom_js",
    "//catsxp/components/catsxp_vpn/common/mojom:mojom_js",
    "//catsxp/components/resources:strings",
  ]
  if (!is_android && !is_ios) {
    public_deps += [
      "//components/omnibox/browser:mojo_bindings",
      "//components/omnibox/browser:mojo_bindings_js",
    ]
  }
  resource_name = "catsxp_new_tab"
  imports_from = [
    "//catsxp/components/catsxp_new_tab_ui/",
    "//catsxp/components/catsxp_news/browser/resources/",
    "//catsxp/components/catsxp_rewards/resources/shared/",
  ]
}

pack_web_resources("generated_resources") {
  resource_name = "catsxp_new_tab"
  output_dir = "$root_gen_dir/catsxp/components/catsxp_new_tab/resources"
  deps = [ ":catsxp_new_tab_ui" ]
}

mojom("mojom") {
  sources = [ "catsxp_new_tab_page.mojom" ]
  public_deps = [
    "//catsxp/components/catsxp_vpn/common/mojom",
    "//catsxp/components/ntp_background_images/browser/mojom",
    "//url/mojom:url_mojom_gurl",
  ]
  if (enable_catsxp_vpn) {
    enabled_features = [ "enable_catsxp_vpn" ]
  }
}
