# Copyright (c) 2023 The Catsxp Authors. All rights reserved. 

import("//catsxp/components/catsxp_ads/buildflags/buildflags.gni")
import("//build/config/features.gni")

assert(enable_catsxp_ads)

source_set("device_id") {
  sources = [
    "device_id_impl.cc",
    "device_id_impl.h",
  ]
  if (is_linux) {
    sources += [ "device_id_impl_linux.cc" ]
  } else if (is_mac) {
    sources += [ "device_id_impl_mac.cc" ]
  } else if (is_android) {
    sources += [ "device_id_impl_android.cc" ]
  } else if (is_win) {
    sources += [ "device_id_impl_win.cc" ]
  }

  deps = [
    "//base",
    "//catsxp/components/catsxp_ads/browser",
    "//components/metrics",
    "//content/public/browser",
    "//crypto",
  ]

  if (is_android) {
    deps += [ "//catsxp/browser/catsxp_ads/android:jni_headers" ]
  }

  libs = []
  if (is_win) {
    libs += [ "iphlpapi.lib" ]
  }
}

source_set("unit_tests") {
  testonly = true
  sources = [ "device_id_impl_unittest.cc" ]

  deps = [
    ":device_id",
    "//base/test:test_support",
    "//testing/gtest",
  ]
}
