# Copyright (c) 2023 The Catsxp Authors. All rights reserved. 

import("//catsxp/components/common/typescript.gni")

transpile_web_ui("catsxp_adblock_internals_ui") {
  output_module = false
  entry_points = [ [
        "catsxp_adblock_internals",
        rebase_path("catsxp_adblock_internals.tsx"),
      ] ]

  resource_name = "catsxp_adblock_internals"
  imports_from = [ "//catsxp/components/catsxp_adblock_ui/" ]
}

pack_web_resources("generated_resources") {
  resource_name = "catsxp_adblock_internals"
  output_dir =
      "$root_gen_dir/catsxp/components/catsxp_adblock/adblock_internals/resources"
  deps = [ ":catsxp_adblock_internals_ui" ]
}
